Fix nav bar color on small screen

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,7 +16,8 @@ html, body {
 //}
 
 .masthead,
-.greedy-nav {
+.greedy-nav,
+.hidden-links {
   background:#e35821 !important;    /* orange nav the theme used */
 }
 
